--- a/styles/style.css
+++ b/styles/style.css
@@ -309,7 +309,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   color: var(--main-heading-color);
   font-weight: 700;
 }
@@ -398,7 +398,7 @@ margin-top: 9.9px;
   .content-section__middle {
     grid-template-columns: 1fr 1.1fr 1fr;
     margin-bottom: 80px;
-    
+
   }
 }
 
