--- a/styles/style.css
+++ b/styles/style.css
@@ -309,7 +309,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  /* margin-top: 10px; */
+  margin-top: 20px;
   color: var(--main-heading-color);
   font-weight: 700;
 }
