--- a/styles/style.css
+++ b/styles/style.css
@@ -309,11 +309,10 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  margin-top: 10px;
+  margin-top: 15px;
   color: var(--main-heading-color);
   font-weight: 700;
 }
-
 
 
 @media (width >=768px) {
@@ -341,6 +340,12 @@
   margin-bottom: 20px;
   color: var(--main-heading-color);
   font-weight: 700;
+}
+
+@media (width >=768px) {
+  .block__title__advice {
+    margin-bottom: 10px;
+  }
 }
 
 @media (width >=1024px) {
