--- a/styles/style.css
+++ b/styles/style.css
@@ -317,7 +317,7 @@
 
 @media (width >=768px) {
   .block__title {
-    margin-top: 20px;
+    margin-top: 0;
   }
 } 
 
@@ -337,6 +337,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
+  margin-top: 10px;
   margin-bottom: 10px;
   color: var(--main-heading-color);
   font-weight: 700;
