--- a/styles/style.css
+++ b/styles/style.css
@@ -338,13 +338,17 @@
   font-family: var(--main-font-family);
   line-height: 23.4px;
   margin-top: 10px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   color: var(--main-heading-color);
   font-weight: 700;
 }
 
 
-
+@media (width >=768px) {
+  .block__title__advice {
+    margin-top: 20px;
+  }
+}
 
 @media (width >=1024px) {
   .block__title__advice {
