--- a/styles/style.css
+++ b/styles/style.css
@@ -309,7 +309,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  margin-top: 5px;
+  /* margin-top: 5px; */
   color: var(--main-heading-color);
   font-weight: 700;
 }
@@ -344,11 +344,11 @@
 }
 
 
-/* @media (width >=768px) {
+@media (width >=768px) {
   .block__title__advice {
-    margin-top: 20px;
+    margin-top: 0;
   }
-} */
+}
 
 @media (width >=1024px) {
   .block__title__advice {
