--- a/styles/style.css
+++ b/styles/style.css
@@ -266,7 +266,7 @@
 .text-blocks {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  /* gap: 10px; */
 }
 
 @media (width >=768px) {
@@ -309,7 +309,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  margin-top: 5px;
+  /* margin-top: 5px; */
   color: var(--main-heading-color);
   font-weight: 700;
 }
@@ -392,10 +392,10 @@ margin-top: 9.9px;
   pointer-events: none;
   outline: none;
 }
-@media (width >=768px) {
+/* @media (width >=768px) {
 .middle {
   margin-bottom: 20px;
-}}
+}} */
 
 
 .content-section__middle {
