--- a/styles/style.css
+++ b/styles/style.css
@@ -273,7 +273,7 @@
   .text-blocks {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
     grid-column: span 2;
   }
 }
@@ -309,7 +309,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  /* margin-top: 5px; */
+  margin-top: 5px;
   color: var(--main-heading-color);
   font-weight: 700;
 }
