--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,7 @@
 
 @media (width >=768px) {
   .section {
-    gap: 20px;
+    gap: 10px;
     
   }
 }
@@ -337,7 +337,7 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  margin-top: 10px;
+  /* margin-top: 10px; */
   margin-bottom: 20px;
   color: var(--main-heading-color);
   font-weight: 700;
