--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,7 @@
 
 @media (width >=768px) {
   .section {
-    gap: 10px;
+    gap: 15px;
     
   }
 }
@@ -452,11 +452,11 @@ margin-top: 9.9px;
   margin-bottom: 20px;
 }
 
-@media (width >=768px) {
+/* @media (width >=768px) {
   .block__content__advice {
     margin-bottom: 30px;
   }
-}
+} */
 
 @media (width >=1024px) {
   .block__content__advice {
