--- a/styles/style.css
+++ b/styles/style.css
@@ -220,7 +220,7 @@
 
 @media (width >=768px) {
   .section {
-    gap: 20px;
+    gap: 25px;
     
   }
 }
@@ -413,7 +413,7 @@ margin-top: 9.9px;
 
 @media (width >=1024px) {
   .content-section__middle {
-    margin-bottom: 0;
+    margin-bottom: 20px;
   }
 }
 
