--- a/styles/style.css
+++ b/styles/style.css
@@ -206,7 +206,7 @@
 @media (width >=1024px) {
   .content {
     padding-top: 40px;
-    gap: 80px;
+    /* gap: 80px; */
   }
 }
 
@@ -409,13 +409,15 @@ margin-top: 9.9px;
   .content-section__middle {
     grid-template-columns: 1fr 1.1fr 1fr;
     margin-bottom: 80px;
+    
 
   }
 }
 
 @media (width >=1024px) {
   .content-section__middle {
-    margin-bottom: 20px;
+    margin-bottom: 80px;
+    padding-top: 80px;
   }
 }
 
