--- a/styles/style.css
+++ b/styles/style.css
@@ -206,7 +206,6 @@
 @media (width >=1024px) {
   .content {
     padding-top: 40px;
-    /* gap: 80px; */
   }
 }
 
@@ -215,13 +214,11 @@
   gap: 25px;
   font-size: var(--main-font-family);
   line-height: 23.4px;
-  
 }
 
 @media (width >=768px) {
   .section {
     gap: 25px;
-    
   }
 }
 
@@ -267,7 +264,6 @@
 .text-blocks {
   display: flex;
   flex-direction: column;
-  /* gap: 10px; */
 }
 
 @media (width >=768px) {
@@ -298,6 +294,7 @@
   font-family: var(--main-font-family);
   font-size: 18px;
   line-height: 23.4px;
+  color: var(--main-heading-color);
 }
 
 @media (width >=1024px) {
@@ -363,17 +360,40 @@
   font-family: var(--main-font-family);
   font-weight: 400;
   font-size: 18px;
-margin-top: 9.9px;
+  margin-top: 9.9px;
   margin-bottom: 10px;
   line-height: 23.4px;
 }
 
 @media (width >=1024px) {
   .block__content {
-
     margin-bottom: 0;
   }
 }
+
+
+
+
+.advice {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+
+@media (width >=1024px) {
+  .advice {
+    margin-bottom: 20px;
+  }
+}
+
+
+
+
+
+
+
+
+
 
 .block-link {
   text-decoration: none;
@@ -381,7 +401,7 @@ margin-top: 9.9px;
 }
 
 .block-link:hover {
-  border-bottom: 1px solid var(--button-hover);
+  border-bottom: 1px solid var(--button-focus);
 }
 
 .block-link:focus {
@@ -390,7 +410,7 @@ margin-top: 9.9px;
 }
 
 .block-link:focus-visible {
-  border: 1px solid var(--button-active);
+  border: 1px solid var(--main-text-color);
   pointer-events: none;
   outline: none;
 }
@@ -446,27 +466,14 @@ margin-top: 9.9px;
   }
 }
 
-.block__content__advice {
-  color: var(--main-text-color);
-  font-family: var(--main-font-family);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 23.4px;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}
 
-/* @media (width >=768px) {
-  .block__content__advice {
-    margin-bottom: 30px;
-  }
-} */
 
-@media (width >=1024px) {
-  .block__content__advice {
-    margin-bottom: 20px;
-  }
-}
+
+
+
+
+
+
 
 .block-bilds {
   gap: 20px;
@@ -522,8 +529,8 @@ margin-top: 9.9px;
 }
 
 .footer .footer__focus {
-  text-shadow: 2px 2px 0 #ff0070;
-  color: rgba(219, 0, 255, 1);
+  text-shadow: 2px 2px 0 var(--main-color-title);
+  color: var(--header-logo-color);
   position: relative;
   font-family: var(--main-font-family);
   font-weight: 700;
@@ -531,7 +538,7 @@ margin-top: 9.9px;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
 }
 
-@media (width >=1024px) {
+@media (width >=768px) {
   .footer .footer__focus {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
