--- a/styles/style.css
+++ b/styles/style.css
@@ -361,15 +361,15 @@
   font-weight: 400;
   font-size: 18px;
   margin-top: 9.9px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   line-height: 23.4px;
 }
 
-@media (width >=1024px) {
+/* @media (width >=1024px) {
   .block__content {
     margin-bottom: 0;
   }
-}
+} */
 
 
 
