--- a/styles/style.css
+++ b/styles/style.css
@@ -313,7 +313,6 @@
   font-weight: 700;
 }
 
-
 @media (width >=768px) {
   .block__title {
     margin-top: 0;
@@ -336,12 +335,10 @@
   font-size: 18px;
   font-family: var(--main-font-family);
   line-height: 23.4px;
-  /* margin-top: 10px; */
   margin-bottom: 20px;
   color: var(--main-heading-color);
   font-weight: 700;
 }
-
 
 @media (width >=768px) {
   .block__title__advice {
@@ -361,39 +358,26 @@
   font-weight: 400;
   font-size: 18px;
   margin-top: 9.9px;
-  /* margin-bottom: 10px; */
+  margin-bottom: 10px;
   line-height: 23.4px;
 }
 
-/* @media (width >=1024px) {
+@media (width >=1024px) {
   .block__content {
     margin-bottom: 0;
   }
-} */
-
-
-
+}
 
 .advice {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-
 @media (width >=1024px) {
   .advice {
     margin-bottom: 20px;
   }
 }
-
-
-
-
-
-
-
-
-
 
 .block-link {
   text-decoration: none;
@@ -414,11 +398,6 @@
   pointer-events: none;
   outline: none;
 }
-/* @media (width >=768px) {
-.middle {
-  margin-bottom: 20px;
-}} */
-
 
 .content-section__middle {
   grid-template-columns: 1fr;
@@ -429,8 +408,6 @@
   .content-section__middle {
     grid-template-columns: 1fr 1.1fr 1fr;
     margin-bottom: 80px;
-    
-
   }
 }
 
@@ -465,15 +442,6 @@
      margin-bottom: 0;
   }
 }
-
-
-
-
-
-
-
-
-
 
 .block-bilds {
   gap: 20px;
@@ -542,4 +510,5 @@
   .footer .footer__focus {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
+  
 }
