--- a/styles/light.css
+++ b/styles/light.css
@@ -1,4 +1,4 @@
-:root.theme-light {
+/* :root.theme-light {
   --main-color-title: #ff8dcb;
   --main-bg-color: #fff1f7;
   --bg-image: url(../images/cover-image-light.png);
@@ -38,4 +38,4 @@
   .header__decorated-element {
     display: none;
   }
-}
+} */
