--- a/styles/style.css
+++ b/styles/style.css
@@ -320,6 +320,7 @@
 }
 
 .subtitle {
+  margin-top: 0;
   font-weight: 400;
 }
 
@@ -510,5 +511,5 @@
   .footer .footer__focus {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
-  
+
 }
