--- a/styles/style.css
+++ b/styles/style.css
@@ -242,14 +242,14 @@
     gap: 20px;
     font-size: 18px;
     padding-top: 20px;
-    margin-bottom: 70px;
+    margin-bottom: 60px;
   }
 }
 
 @media (width >=1024px) {
   .content-section__why {
     grid-template-columns: 1fr 1fr 1fr;
-    margin-bottom: 10px;
+    margin-bottom: 0;
   }
 }
 
